# src/app/api/docs/swagger.json
@@ -11,7 +11,61 @@
     },
     "basePath": "/api",
     "paths": {
-        "/albums": {
+        "/auth/login": {
+            "post": {
+                "description": "Rota que permite que um usuário se autentique no sistema utilizando seu endereço de e-mail e senha.\n| E-mail              | Senha     | Função                                                            |\n|---------------------|-----------|-------------------------------------------------------------------|\n| admin@ifal.edu.br   | Test1234! | Usuário comum do sistema\t\t\t\t\t\t\t\t\t\t  |",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Rotas de autenticação"
+                ],
+                "summary": "Fazer login no sistema",
+                "operationId": "Login",
+                "responses": {
+                    "400": {
+                        "description": "Requisição mal formulada.",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorMessage"
+                        }
+                    },
+                    "401": {
+                        "description": "Usuário não autorizado.",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorMessage"
+                        }
+                    },
+                    "403": {
+                        "description": "Acesso negado.",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorMessage"
+                        }
+                    },
+                    "422": {
+                        "description": "Algum dado informado não pôde ser processado.",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorMessage"
+                        }
+                    },
+                    "500": {
+                        "description": "Ocorreu um erro inesperado.",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorMessage"
+                        }
+                    },
+                    "503": {
+                        "description": "A base de dados não está disponível.",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorMessage"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/albums": {
             "get": {
                 "description": "Rota que permite que se busque todos os albuns",
                 "produces": [
@@ -65,7 +119,7 @@
                 }
             }
         },
-        "/albums/{albumID}/songs": {
+        "/user/albums/{albumID}/songs": {
             "get": {
                 "description": "Rota que permite que se busque todas as músicas de um album",
                 "produces": [
@@ -129,7 +183,7 @@
                 }
             }
         },
-        "/artists": {
+        "/user/artists": {
             "get": {
                 "description": "Rota que permite que se busque todos os artistas do banco",
                 "produces": [
@@ -183,7 +237,7 @@
                 }
             }
         },
-        "/artists/{artistID}": {
+        "/user/artists/{artistID}": {
             "get": {
                 "description": "Rota que permite que se busque as informações de um artista",
                 "produces": [
@@ -247,7 +301,7 @@
                 }
             }
         },
-        "/artists/{artistID}/songs": {
+        "/user/artists/{artistID}/songs": {
             "get": {
                 "description": "Rota que permite que se busque todas as músicas de um artista",
                 "produces": [
@@ -276,60 +330,6 @@
                             "items": {
                                 "$ref": "#/definitions/response.SongDTO"
                             }
-                        }
-                    },
-                    "401": {
-                        "description": "Usuário não autorizado.",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorMessage"
-                        }
-                    },
-                    "403": {
-                        "description": "Acesso negado.",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorMessage"
-                        }
-                    },
-                    "422": {
-                        "description": "Algum dado informado não pôde ser processado.",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorMessage"
-                        }
-                    },
-                    "500": {
-                        "description": "Ocorreu um erro inesperado.",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorMessage"
-                        }
-                    },
-                    "503": {
-                        "description": "A base de dados não está disponível.",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorMessage"
-                        }
-                    }
-                }
-            }
-        },
-        "/auth/login": {
-            "post": {
-                "description": "Rota que permite que um usuário se autentique no sistema utilizando seu endereço de e-mail e senha.\n| E-mail              | Senha     | Função                                                            |\n|---------------------|-----------|-------------------------------------------------------------------|\n| admin@ifal.edu.br   | Test1234! | Usuário comum do sistema\t\t\t\t\t\t\t\t\t\t  |",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Rotas de autenticação"
-                ],
-                "summary": "Fazer login no sistema",
-                "operationId": "Login",
-                "responses": {
-                    "400": {
-                        "description": "Requisição mal formulada.",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorMessage"
                         }
                     },
                     "401": {
